--- a/07-PO33Q.html
+++ b/07-PO33Q.html
@@ -171,7 +171,7 @@ window.Quarto = {
     <img src="./images/Crest_white.png" alt="" class="navbar-logo">
     </a>
     <a class="navbar-brand" href="./index.html">
-    <span class="navbar-title">PO33Q - Determinants of Democracy</span>
+    <span class="navbar-title"><span class="title-long">PO33Q – Determinants of Democracy</span> <span class="title-short">PO33Q</span></span>
     </a>
   </div>
         <div class="quarto-navbar-tools tools-end">
@@ -1647,8 +1647,8 @@ Figure&nbsp;6: ROC Curve
 
     <script>
 
-      function styleCell_8kdv6tpr42g3w62ih1ku(i, j, css_id) {
-          var table = document.getElementById("tinytable_8kdv6tpr42g3w62ih1ku");
+      function styleCell_9uql3zfoaf81qeqaczdd(i, j, css_id) {
+          var table = document.getElementById("tinytable_9uql3zfoaf81qeqaczdd");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1657,8 +1657,8 @@ Figure&nbsp;6: ROC Curve
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_8kdv6tpr42g3w62ih1ku(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_8kdv6tpr42g3w62ih1ku");
+      function spanCell_9uql3zfoaf81qeqaczdd(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_9uql3zfoaf81qeqaczdd");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -1689,26 +1689,26 @@ Figure&nbsp;6: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_pb9kujeh6imd5umkuemz',}, 
-          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_a4o9n04i4e0dr01n3k7d',}, 
-          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_3tejp95q0ul05hk1d8er',}, 
-          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_edq8nndhq2vug41lc7yd',}, 
-          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_5se9ayo8swu4gqmidlkw',}, 
-          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_z6axtjqelquci1j08123',}, 
-          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_nv8geqgg1dcky2zsnum4',}, 
-          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_5wyxxp96jpbn3juolbbm',}, 
-          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_t4pr18z0mo0pry1af8l8',}, 
-          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_9iypf69f2vg95tl5qe1r',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_k0lic6gsfzmcd5udk56h',}, 
-          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_rq523ib7ad76gwne89is',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_57laz4djrpzu7ko9fjit',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_v467qga35mfm5lr2asjt',}, 
+          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_asitpd8fwgid9h54lg6r',}, 
+          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_9sesjule3v155swt5uhd',}, 
+          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_8bzwyd09z4l144gqgwgv',}, 
+          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_tvxxj4gmhw5l25d6bo0a',}, 
+          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_mpc38wxl5m7kvpnpo79k',}, 
+          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_jtm65m38jc0r7tyrgaru',}, 
+          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_tnal1r75q2ozl6pqyvwr',}, 
+          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_g8tyhu8k4fa2vfhinmhn',}, 
+          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_u4uyjul2ubxvkz54lvm5',}, 
+          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_2bitoa8v7yfg71z5nhid',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_z5uxbqhgaym6t7xrn9f0',}, 
+          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_0nre41e2efc2x09ycq0s',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_v1nyw81n9lsz9tusz5fy',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_8z7eh7ndpqwexu8020by',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_8kdv6tpr42g3w62ih1ku(cell.i, cell.j, group.css_id);
+                  styleCell_9uql3zfoaf81qeqaczdd(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1716,23 +1716,23 @@ Figure&nbsp;6: ROC Curve
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_pb9kujeh6imd5umkuemz, .table th.tinytable_css_pb9kujeh6imd5umkuemz { text-align: center; text-align: center; }
-      .table td.tinytable_css_a4o9n04i4e0dr01n3k7d, .table th.tinytable_css_a4o9n04i4e0dr01n3k7d { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_3tejp95q0ul05hk1d8er, .table th.tinytable_css_3tejp95q0ul05hk1d8er { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_edq8nndhq2vug41lc7yd, .table th.tinytable_css_edq8nndhq2vug41lc7yd { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_5se9ayo8swu4gqmidlkw, .table th.tinytable_css_5se9ayo8swu4gqmidlkw { text-align: center; }
-      .table td.tinytable_css_z6axtjqelquci1j08123, .table th.tinytable_css_z6axtjqelquci1j08123 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_nv8geqgg1dcky2zsnum4, .table th.tinytable_css_nv8geqgg1dcky2zsnum4 { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_5wyxxp96jpbn3juolbbm, .table th.tinytable_css_5wyxxp96jpbn3juolbbm { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_t4pr18z0mo0pry1af8l8, .table th.tinytable_css_t4pr18z0mo0pry1af8l8 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_9iypf69f2vg95tl5qe1r, .table th.tinytable_css_9iypf69f2vg95tl5qe1r { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_k0lic6gsfzmcd5udk56h, .table th.tinytable_css_k0lic6gsfzmcd5udk56h { text-align: left; }
-      .table td.tinytable_css_rq523ib7ad76gwne89is, .table th.tinytable_css_rq523ib7ad76gwne89is { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_57laz4djrpzu7ko9fjit, .table th.tinytable_css_57laz4djrpzu7ko9fjit { text-align: left; text-align: center; }
-      .table td.tinytable_css_v467qga35mfm5lr2asjt, .table th.tinytable_css_v467qga35mfm5lr2asjt { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_asitpd8fwgid9h54lg6r, .table th.tinytable_css_asitpd8fwgid9h54lg6r { text-align: center; text-align: center; }
+      .table td.tinytable_css_9sesjule3v155swt5uhd, .table th.tinytable_css_9sesjule3v155swt5uhd { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_8bzwyd09z4l144gqgwgv, .table th.tinytable_css_8bzwyd09z4l144gqgwgv { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_tvxxj4gmhw5l25d6bo0a, .table th.tinytable_css_tvxxj4gmhw5l25d6bo0a { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_mpc38wxl5m7kvpnpo79k, .table th.tinytable_css_mpc38wxl5m7kvpnpo79k { text-align: center; }
+      .table td.tinytable_css_jtm65m38jc0r7tyrgaru, .table th.tinytable_css_jtm65m38jc0r7tyrgaru { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_tnal1r75q2ozl6pqyvwr, .table th.tinytable_css_tnal1r75q2ozl6pqyvwr { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_g8tyhu8k4fa2vfhinmhn, .table th.tinytable_css_g8tyhu8k4fa2vfhinmhn { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_u4uyjul2ubxvkz54lvm5, .table th.tinytable_css_u4uyjul2ubxvkz54lvm5 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_2bitoa8v7yfg71z5nhid, .table th.tinytable_css_2bitoa8v7yfg71z5nhid { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_z5uxbqhgaym6t7xrn9f0, .table th.tinytable_css_z5uxbqhgaym6t7xrn9f0 { text-align: left; }
+      .table td.tinytable_css_0nre41e2efc2x09ycq0s, .table th.tinytable_css_0nre41e2efc2x09ycq0s { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_v1nyw81n9lsz9tusz5fy, .table th.tinytable_css_v1nyw81n9lsz9tusz5fy { text-align: left; text-align: center; }
+      .table td.tinytable_css_8z7eh7ndpqwexu8020by, .table th.tinytable_css_8z7eh7ndpqwexu8020by { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_8kdv6tpr42g3w62ih1ku" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_9uql3zfoaf81qeqaczdd" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-2" data-col="0"> </th>
