--- a/01-PO33Q.html
+++ b/01-PO33Q.html
@@ -171,7 +171,7 @@ window.Quarto = {
     <img src="./images/Crest_white.png" alt="" class="navbar-logo">
     </a>
     <a class="navbar-brand" href="./index.html">
-    <span class="navbar-title">PO33Q - Determinants of Democracy</span>
+    <span class="navbar-title"><span class="title-long">PO33Q – Determinants of Democracy</span> <span class="title-short">PO33Q</span></span>
     </a>
   </div>
         <div class="quarto-navbar-tools tools-end">
