--- a/03-PO33Q.html
+++ b/03-PO33Q.html
@@ -169,7 +169,7 @@ window.Quarto = {
     <img src="./images/Crest_white.png" alt="" class="navbar-logo">
     </a>
     <a class="navbar-brand" href="./index.html">
-    <span class="navbar-title">PO33Q - Determinants of Democracy</span>
+    <span class="navbar-title"><span class="title-long">PO33Q – Determinants of Democracy</span> <span class="title-short">PO33Q</span></span>
     </a>
   </div>
         <div class="quarto-navbar-tools tools-end">
@@ -678,8 +678,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_qtd7umwh4a0aeumq1x78(i, j, css_id) {
-          var table = document.getElementById("tinytable_qtd7umwh4a0aeumq1x78");
+      function styleCell_2hgzc4qlcqhexv77qys0(i, j, css_id) {
+          var table = document.getElementById("tinytable_2hgzc4qlcqhexv77qys0");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -688,8 +688,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_qtd7umwh4a0aeumq1x78(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_qtd7umwh4a0aeumq1x78");
+      function spanCell_2hgzc4qlcqhexv77qys0(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_2hgzc4qlcqhexv77qys0");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -720,20 +720,20 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_9j9w4now6y5h05k4jj1y',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_9djg8c2jljb2qn5x9gdu',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_3slz04h9frlkj9ub32mx',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_dts3926au8amq1h9rxfy',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_rr5al2a6pmsstqn9oggg',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_w08gf617ac2l0e51ixsc',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_9bztomhlveagcx4r3cht',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_mupyfiq8a6vd4sw4n0ng',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_dj06pi0assuht8raw7ok',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_kicqrf58szot3pnjjd4z',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_lhu97cf71pp2nxidn40k',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_0b0vz1kmbsczqpn6t0ln',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_leyjq1neqhpucvqcei0k',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_3ebygtvu0l0d1fp8wbja',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_t0tggpb6lco6oeu0tf46',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_cnj3e9t35ilyhpyjssff',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_qtd7umwh4a0aeumq1x78(cell.i, cell.j, group.css_id);
+                  styleCell_2hgzc4qlcqhexv77qys0(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -741,17 +741,17 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_9j9w4now6y5h05k4jj1y, .table th.tinytable_css_9j9w4now6y5h05k4jj1y { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_9djg8c2jljb2qn5x9gdu, .table th.tinytable_css_9djg8c2jljb2qn5x9gdu { text-align: center; }
-      .table td.tinytable_css_3slz04h9frlkj9ub32mx, .table th.tinytable_css_3slz04h9frlkj9ub32mx { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_dts3926au8amq1h9rxfy, .table th.tinytable_css_dts3926au8amq1h9rxfy { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_rr5al2a6pmsstqn9oggg, .table th.tinytable_css_rr5al2a6pmsstqn9oggg { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_w08gf617ac2l0e51ixsc, .table th.tinytable_css_w08gf617ac2l0e51ixsc { text-align: left; }
-      .table td.tinytable_css_9bztomhlveagcx4r3cht, .table th.tinytable_css_9bztomhlveagcx4r3cht { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_mupyfiq8a6vd4sw4n0ng, .table th.tinytable_css_mupyfiq8a6vd4sw4n0ng { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_dj06pi0assuht8raw7ok, .table th.tinytable_css_dj06pi0assuht8raw7ok { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_kicqrf58szot3pnjjd4z, .table th.tinytable_css_kicqrf58szot3pnjjd4z { text-align: center; }
+      .table td.tinytable_css_lhu97cf71pp2nxidn40k, .table th.tinytable_css_lhu97cf71pp2nxidn40k { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_0b0vz1kmbsczqpn6t0ln, .table th.tinytable_css_0b0vz1kmbsczqpn6t0ln { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_leyjq1neqhpucvqcei0k, .table th.tinytable_css_leyjq1neqhpucvqcei0k { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_3ebygtvu0l0d1fp8wbja, .table th.tinytable_css_3ebygtvu0l0d1fp8wbja { text-align: left; }
+      .table td.tinytable_css_t0tggpb6lco6oeu0tf46, .table th.tinytable_css_t0tggpb6lco6oeu0tf46 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_cnj3e9t35ilyhpyjssff, .table th.tinytable_css_cnj3e9t35ilyhpyjssff { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_qtd7umwh4a0aeumq1x78" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_2hgzc4qlcqhexv77qys0" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
@@ -855,8 +855,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <script>
 
-      function styleCell_8ovaxh7fhrtl9i5n8aq4(i, j, css_id) {
-          var table = document.getElementById("tinytable_8ovaxh7fhrtl9i5n8aq4");
+      function styleCell_nj67qs7svfbcdz4c5p4q(i, j, css_id) {
+          var table = document.getElementById("tinytable_nj67qs7svfbcdz4c5p4q");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -865,8 +865,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_8ovaxh7fhrtl9i5n8aq4(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_8ovaxh7fhrtl9i5n8aq4");
+      function spanCell_nj67qs7svfbcdz4c5p4q(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_nj67qs7svfbcdz4c5p4q");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -897,20 +897,20 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_2tyv4pusdfrib0db4lhh',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_m3zozx0rpxvoy4z4jgp4',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_193gufq222kk16yhbku7',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_l2m8xwwqc42qapa5a6a3',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_sgz0tqo09jy2zjzrlxf1',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_lu79th4wp7okqpz7jcqv',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_nmccs0wiun4hrce0fqrp',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_b9x8p29vwne59d5m8mho',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_h20re35fx3t1e65wayrs',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_46y1rcj3fxhq7db5cg8q',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_54t1tma7ivuujlvj4wy5',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_ji3g79v9tj3e1852yyeh',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_8s3a4n1nk3xcbj2z374k',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_0v9q8xlnct624jod8zm5',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_gngtkowdocb5alhdmcho',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_2fms4pd2d9x8r2c465at',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_8ovaxh7fhrtl9i5n8aq4(cell.i, cell.j, group.css_id);
+                  styleCell_nj67qs7svfbcdz4c5p4q(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -918,17 +918,17 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_2tyv4pusdfrib0db4lhh, .table th.tinytable_css_2tyv4pusdfrib0db4lhh { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_m3zozx0rpxvoy4z4jgp4, .table th.tinytable_css_m3zozx0rpxvoy4z4jgp4 { text-align: center; }
-      .table td.tinytable_css_193gufq222kk16yhbku7, .table th.tinytable_css_193gufq222kk16yhbku7 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_l2m8xwwqc42qapa5a6a3, .table th.tinytable_css_l2m8xwwqc42qapa5a6a3 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_sgz0tqo09jy2zjzrlxf1, .table th.tinytable_css_sgz0tqo09jy2zjzrlxf1 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_lu79th4wp7okqpz7jcqv, .table th.tinytable_css_lu79th4wp7okqpz7jcqv { text-align: left; }
-      .table td.tinytable_css_nmccs0wiun4hrce0fqrp, .table th.tinytable_css_nmccs0wiun4hrce0fqrp { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_b9x8p29vwne59d5m8mho, .table th.tinytable_css_b9x8p29vwne59d5m8mho { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_h20re35fx3t1e65wayrs, .table th.tinytable_css_h20re35fx3t1e65wayrs { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_46y1rcj3fxhq7db5cg8q, .table th.tinytable_css_46y1rcj3fxhq7db5cg8q { text-align: center; }
+      .table td.tinytable_css_54t1tma7ivuujlvj4wy5, .table th.tinytable_css_54t1tma7ivuujlvj4wy5 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_ji3g79v9tj3e1852yyeh, .table th.tinytable_css_ji3g79v9tj3e1852yyeh { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_8s3a4n1nk3xcbj2z374k, .table th.tinytable_css_8s3a4n1nk3xcbj2z374k { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_0v9q8xlnct624jod8zm5, .table th.tinytable_css_0v9q8xlnct624jod8zm5 { text-align: left; }
+      .table td.tinytable_css_gngtkowdocb5alhdmcho, .table th.tinytable_css_gngtkowdocb5alhdmcho { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_2fms4pd2d9x8r2c465at, .table th.tinytable_css_2fms4pd2d9x8r2c465at { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_8ovaxh7fhrtl9i5n8aq4" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_nj67qs7svfbcdz4c5p4q" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
