--- a/04-PO33Q.html
+++ b/04-PO33Q.html
@@ -106,7 +106,7 @@ div.csl-indent {
     <img src="./images/Crest_white.png" alt="" class="navbar-logo">
     </a>
     <a class="navbar-brand" href="./index.html">
-    <span class="navbar-title">PO33Q - Determinants of Democracy</span>
+    <span class="navbar-title"><span class="title-long">PO33Q – Determinants of Democracy</span> <span class="title-short">PO33Q</span></span>
     </a>
   </div>
         <div class="quarto-navbar-tools tools-end">
@@ -766,8 +766,8 @@ Table&nbsp;3: What is left…
 
     <script>
 
-      function styleCell_k7z623f1n7ijlrjviore(i, j, css_id) {
-          var table = document.getElementById("tinytable_k7z623f1n7ijlrjviore");
+      function styleCell_mdn0acewvl07ufonh6nv(i, j, css_id) {
+          var table = document.getElementById("tinytable_mdn0acewvl07ufonh6nv");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -776,8 +776,8 @@ Table&nbsp;3: What is left…
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_k7z623f1n7ijlrjviore(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_k7z623f1n7ijlrjviore");
+      function spanCell_mdn0acewvl07ufonh6nv(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_mdn0acewvl07ufonh6nv");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -808,21 +808,21 @@ Table&nbsp;3: What is left…
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '-1', j: 2 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_r8z1n40rgjardwz9h52c',}, 
-          { positions: [ { i: '6', j: 1 }, { i: '6', j: 2 }, { i: '6', j: 3 },  ], css_id: 'tinytable_css_8ftmyfjslsqowd3qsf9j',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '4', j: 1 }, { i: '5', j: 1 }, { i: '2', j: 2 }, { i: '4', j: 2 }, { i: '1', j: 2 }, { i: '2', j: 3 }, { i: '3', j: 1 }, { i: '4', j: 3 }, { i: '5', j: 2 }, { i: '3', j: 2 }, { i: '1', j: 3 }, { i: '3', j: 3 }, { i: '5', j: 3 },  ], css_id: 'tinytable_css_luuopzyglnij9qzgbihk',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_5o6x0zsnok67vr6p6vsl',}, 
-          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 },  ], css_id: 'tinytable_css_eirc8lyq53ghs78y84kp',}, 
-          { positions: [ { i: '6', j: 0 },  ], css_id: 'tinytable_css_pyauzy6smjn12k8imm2m',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 },  ], css_id: 'tinytable_css_0h8iez333gxpfekodbi7',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_epllgzmk2ywm4kt4cj19',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_y2bdfsqn4xbbxwe73hyx',}, 
+          { positions: [ { i: '-1', j: 2 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_k50cag4z511pz9urghxq',}, 
+          { positions: [ { i: '6', j: 1 }, { i: '6', j: 2 }, { i: '6', j: 3 },  ], css_id: 'tinytable_css_euggr6xvol87xi3bdr4e',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '4', j: 1 }, { i: '5', j: 1 }, { i: '2', j: 2 }, { i: '4', j: 2 }, { i: '1', j: 2 }, { i: '2', j: 3 }, { i: '3', j: 1 }, { i: '4', j: 3 }, { i: '5', j: 2 }, { i: '3', j: 2 }, { i: '1', j: 3 }, { i: '3', j: 3 }, { i: '5', j: 3 },  ], css_id: 'tinytable_css_26evmgapb5jy6bd6pz6d',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_5sdxqhvv7ztf8z9fbt0j',}, 
+          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 },  ], css_id: 'tinytable_css_73vchrtvzzzlsujsh7ye',}, 
+          { positions: [ { i: '6', j: 0 },  ], css_id: 'tinytable_css_fx3lf6megffmb7finp4d',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 },  ], css_id: 'tinytable_css_h5p7g1wm9szyfmpw68hi',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_s5yg5d0rcl857gb8naip',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_89ej06g2pszrvp1jeqey',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_k7z623f1n7ijlrjviore(cell.i, cell.j, group.css_id);
+                  styleCell_mdn0acewvl07ufonh6nv(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -830,18 +830,18 @@ Table&nbsp;3: What is left…
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_r8z1n40rgjardwz9h52c, .table th.tinytable_css_r8z1n40rgjardwz9h52c { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_8ftmyfjslsqowd3qsf9j, .table th.tinytable_css_8ftmyfjslsqowd3qsf9j { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_luuopzyglnij9qzgbihk, .table th.tinytable_css_luuopzyglnij9qzgbihk { text-align: center; }
-      .table td.tinytable_css_5o6x0zsnok67vr6p6vsl, .table th.tinytable_css_5o6x0zsnok67vr6p6vsl { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_eirc8lyq53ghs78y84kp, .table th.tinytable_css_eirc8lyq53ghs78y84kp { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_pyauzy6smjn12k8imm2m, .table th.tinytable_css_pyauzy6smjn12k8imm2m { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_0h8iez333gxpfekodbi7, .table th.tinytable_css_0h8iez333gxpfekodbi7 { text-align: left; }
-      .table td.tinytable_css_epllgzmk2ywm4kt4cj19, .table th.tinytable_css_epllgzmk2ywm4kt4cj19 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_y2bdfsqn4xbbxwe73hyx, .table th.tinytable_css_y2bdfsqn4xbbxwe73hyx { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_k50cag4z511pz9urghxq, .table th.tinytable_css_k50cag4z511pz9urghxq { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_euggr6xvol87xi3bdr4e, .table th.tinytable_css_euggr6xvol87xi3bdr4e { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_26evmgapb5jy6bd6pz6d, .table th.tinytable_css_26evmgapb5jy6bd6pz6d { text-align: center; }
+      .table td.tinytable_css_5sdxqhvv7ztf8z9fbt0j, .table th.tinytable_css_5sdxqhvv7ztf8z9fbt0j { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_73vchrtvzzzlsujsh7ye, .table th.tinytable_css_73vchrtvzzzlsujsh7ye { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_fx3lf6megffmb7finp4d, .table th.tinytable_css_fx3lf6megffmb7finp4d { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_h5p7g1wm9szyfmpw68hi, .table th.tinytable_css_h5p7g1wm9szyfmpw68hi { text-align: left; }
+      .table td.tinytable_css_s5yg5d0rcl857gb8naip, .table th.tinytable_css_s5yg5d0rcl857gb8naip { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_89ej06g2pszrvp1jeqey, .table th.tinytable_css_89ej06g2pszrvp1jeqey { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_k7z623f1n7ijlrjviore" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_mdn0acewvl07ufonh6nv" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
