--- a/07-PO33Q.html
+++ b/07-PO33Q.html
@@ -248,7 +248,7 @@ window.Quarto = {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./11-Markdown.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">Markdown</span></a>
+  <a href="./11-Quarto.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">Quarto</span></a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -1647,8 +1647,8 @@ Figure&nbsp;6: ROC Curve
 
     <script>
 
-      function styleCell_zifjbwexkqcgej8tr60i(i, j, css_id) {
-          var table = document.getElementById("tinytable_zifjbwexkqcgej8tr60i");
+      function styleCell_mearpq3zyizgxispdban(i, j, css_id) {
+          var table = document.getElementById("tinytable_mearpq3zyizgxispdban");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1657,8 +1657,8 @@ Figure&nbsp;6: ROC Curve
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_zifjbwexkqcgej8tr60i(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_zifjbwexkqcgej8tr60i");
+      function spanCell_mearpq3zyizgxispdban(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_mearpq3zyizgxispdban");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -1689,26 +1689,26 @@ Figure&nbsp;6: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_wane36pigdvzkze5xi4h',}, 
-          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_9fve9v1ijgkrfco2m9s4',}, 
-          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_du64jcone55i632g5fj8',}, 
-          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_2di39xamj3rh0hyxbj5t',}, 
-          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_mj0lo8lzg1udt7g290ah',}, 
-          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_pdsf5ddpa2jn8a3ud90o',}, 
-          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_7vxiv24jxexv529poff0',}, 
-          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_13ep7ek0in7x3y8eam6g',}, 
-          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_y4av1b85ncxcv35uyzxp',}, 
-          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_bjrjwtyks8vzax2q2qkh',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_ezi24x1h7kd7jnrroquf',}, 
-          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_kqd0fcuayhdcpu5fnk7b',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_4nb0awysf0bxbwmyuhgf',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_v6xpw8yv9v98ghp53q8w',}, 
+          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_hlgebmxo3w5kv04pqk1j',}, 
+          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_i54gv5beezlkkfguf3rr',}, 
+          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_lsg3i99n7le64ot50eeo',}, 
+          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_lim849wezfmdr52t8czv',}, 
+          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_jzomr4kp33els4oam52d',}, 
+          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_0nm7a3h5t0zoo34jojxp',}, 
+          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_92b5pfjb9ly9c6xqig98',}, 
+          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_yji3qlvdo1vkwegjj6bp',}, 
+          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_wls6g3d8dd8avn00223c',}, 
+          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_6fyd4nekd362ssfdxclg',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_2sfpxyanzvmizyasiy98',}, 
+          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_9cuvvlba87wjl3u91bi3',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_3fpn7cxcndxy0yqzumrl',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_tu3mhkvicvbhfw6jhjzi',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_zifjbwexkqcgej8tr60i(cell.i, cell.j, group.css_id);
+                  styleCell_mearpq3zyizgxispdban(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1716,23 +1716,23 @@ Figure&nbsp;6: ROC Curve
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_wane36pigdvzkze5xi4h, .table th.tinytable_css_wane36pigdvzkze5xi4h { text-align: center; text-align: center; }
-      .table td.tinytable_css_9fve9v1ijgkrfco2m9s4, .table th.tinytable_css_9fve9v1ijgkrfco2m9s4 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_du64jcone55i632g5fj8, .table th.tinytable_css_du64jcone55i632g5fj8 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_2di39xamj3rh0hyxbj5t, .table th.tinytable_css_2di39xamj3rh0hyxbj5t { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_mj0lo8lzg1udt7g290ah, .table th.tinytable_css_mj0lo8lzg1udt7g290ah { text-align: center; }
-      .table td.tinytable_css_pdsf5ddpa2jn8a3ud90o, .table th.tinytable_css_pdsf5ddpa2jn8a3ud90o { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_7vxiv24jxexv529poff0, .table th.tinytable_css_7vxiv24jxexv529poff0 { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_13ep7ek0in7x3y8eam6g, .table th.tinytable_css_13ep7ek0in7x3y8eam6g { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_y4av1b85ncxcv35uyzxp, .table th.tinytable_css_y4av1b85ncxcv35uyzxp { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_bjrjwtyks8vzax2q2qkh, .table th.tinytable_css_bjrjwtyks8vzax2q2qkh { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_ezi24x1h7kd7jnrroquf, .table th.tinytable_css_ezi24x1h7kd7jnrroquf { text-align: left; }
-      .table td.tinytable_css_kqd0fcuayhdcpu5fnk7b, .table th.tinytable_css_kqd0fcuayhdcpu5fnk7b { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_4nb0awysf0bxbwmyuhgf, .table th.tinytable_css_4nb0awysf0bxbwmyuhgf { text-align: left; text-align: center; }
-      .table td.tinytable_css_v6xpw8yv9v98ghp53q8w, .table th.tinytable_css_v6xpw8yv9v98ghp53q8w { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_hlgebmxo3w5kv04pqk1j, .table th.tinytable_css_hlgebmxo3w5kv04pqk1j { text-align: center; text-align: center; }
+      .table td.tinytable_css_i54gv5beezlkkfguf3rr, .table th.tinytable_css_i54gv5beezlkkfguf3rr { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_lsg3i99n7le64ot50eeo, .table th.tinytable_css_lsg3i99n7le64ot50eeo { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_lim849wezfmdr52t8czv, .table th.tinytable_css_lim849wezfmdr52t8czv { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_jzomr4kp33els4oam52d, .table th.tinytable_css_jzomr4kp33els4oam52d { text-align: center; }
+      .table td.tinytable_css_0nm7a3h5t0zoo34jojxp, .table th.tinytable_css_0nm7a3h5t0zoo34jojxp { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_92b5pfjb9ly9c6xqig98, .table th.tinytable_css_92b5pfjb9ly9c6xqig98 { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_yji3qlvdo1vkwegjj6bp, .table th.tinytable_css_yji3qlvdo1vkwegjj6bp { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_wls6g3d8dd8avn00223c, .table th.tinytable_css_wls6g3d8dd8avn00223c { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_6fyd4nekd362ssfdxclg, .table th.tinytable_css_6fyd4nekd362ssfdxclg { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_2sfpxyanzvmizyasiy98, .table th.tinytable_css_2sfpxyanzvmizyasiy98 { text-align: left; }
+      .table td.tinytable_css_9cuvvlba87wjl3u91bi3, .table th.tinytable_css_9cuvvlba87wjl3u91bi3 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_3fpn7cxcndxy0yqzumrl, .table th.tinytable_css_3fpn7cxcndxy0yqzumrl { text-align: left; text-align: center; }
+      .table td.tinytable_css_tu3mhkvicvbhfw6jhjzi, .table th.tinytable_css_tu3mhkvicvbhfw6jhjzi { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_zifjbwexkqcgej8tr60i" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_mearpq3zyizgxispdban" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-2" data-col="0"> </th>
