--- a/03-PO33Q.html
+++ b/03-PO33Q.html
@@ -246,7 +246,7 @@ window.Quarto = {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./11-Markdown.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">Markdown</span></a>
+  <a href="./11-Quarto.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">Quarto</span></a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -678,8 +678,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_yndx7jvfh63qj64hrulc(i, j, css_id) {
-          var table = document.getElementById("tinytable_yndx7jvfh63qj64hrulc");
+      function styleCell_k1eovoln293jehjqwx06(i, j, css_id) {
+          var table = document.getElementById("tinytable_k1eovoln293jehjqwx06");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -688,8 +688,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_yndx7jvfh63qj64hrulc(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_yndx7jvfh63qj64hrulc");
+      function spanCell_k1eovoln293jehjqwx06(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_k1eovoln293jehjqwx06");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -720,20 +720,20 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_bp0bs2lr02elga6jqhc5',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_afmz7ynx546bskbcwcj6',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_ac1yny6f509pyasub6mp',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_su6x75vtgn1o3sdbqhb3',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_b8mya1hvsnhpu0m6dob1',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_qbfz1df66evt1eoicwlt',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_o2ge3k7f8bhtgkuh2kf4',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_engsd0phv6uqak55g232',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_cgsbr72ls3hpucwo396r',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_c920m2gh5coylk2oyn4h',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_5cuaozk2h8vj42nsz4z0',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_b6bvfadk63bcqlcrsolz',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_r61usr8k9cx579qfwq92',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_yol87f905hia6kunnxgc',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_kqujrk9qjcir62nur4df',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_rnkiuu4w29w31xe9idqh',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_yndx7jvfh63qj64hrulc(cell.i, cell.j, group.css_id);
+                  styleCell_k1eovoln293jehjqwx06(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -741,17 +741,17 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_bp0bs2lr02elga6jqhc5, .table th.tinytable_css_bp0bs2lr02elga6jqhc5 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_afmz7ynx546bskbcwcj6, .table th.tinytable_css_afmz7ynx546bskbcwcj6 { text-align: center; }
-      .table td.tinytable_css_ac1yny6f509pyasub6mp, .table th.tinytable_css_ac1yny6f509pyasub6mp { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_su6x75vtgn1o3sdbqhb3, .table th.tinytable_css_su6x75vtgn1o3sdbqhb3 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_b8mya1hvsnhpu0m6dob1, .table th.tinytable_css_b8mya1hvsnhpu0m6dob1 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_qbfz1df66evt1eoicwlt, .table th.tinytable_css_qbfz1df66evt1eoicwlt { text-align: left; }
-      .table td.tinytable_css_o2ge3k7f8bhtgkuh2kf4, .table th.tinytable_css_o2ge3k7f8bhtgkuh2kf4 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_engsd0phv6uqak55g232, .table th.tinytable_css_engsd0phv6uqak55g232 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_cgsbr72ls3hpucwo396r, .table th.tinytable_css_cgsbr72ls3hpucwo396r { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_c920m2gh5coylk2oyn4h, .table th.tinytable_css_c920m2gh5coylk2oyn4h { text-align: center; }
+      .table td.tinytable_css_5cuaozk2h8vj42nsz4z0, .table th.tinytable_css_5cuaozk2h8vj42nsz4z0 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_b6bvfadk63bcqlcrsolz, .table th.tinytable_css_b6bvfadk63bcqlcrsolz { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_r61usr8k9cx579qfwq92, .table th.tinytable_css_r61usr8k9cx579qfwq92 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_yol87f905hia6kunnxgc, .table th.tinytable_css_yol87f905hia6kunnxgc { text-align: left; }
+      .table td.tinytable_css_kqujrk9qjcir62nur4df, .table th.tinytable_css_kqujrk9qjcir62nur4df { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_rnkiuu4w29w31xe9idqh, .table th.tinytable_css_rnkiuu4w29w31xe9idqh { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_yndx7jvfh63qj64hrulc" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_k1eovoln293jehjqwx06" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
@@ -855,8 +855,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <script>
 
-      function styleCell_dweseye339es9ovjb02r(i, j, css_id) {
-          var table = document.getElementById("tinytable_dweseye339es9ovjb02r");
+      function styleCell_azadgsw800c1da3hl1cx(i, j, css_id) {
+          var table = document.getElementById("tinytable_azadgsw800c1da3hl1cx");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -865,8 +865,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_dweseye339es9ovjb02r(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_dweseye339es9ovjb02r");
+      function spanCell_azadgsw800c1da3hl1cx(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_azadgsw800c1da3hl1cx");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -897,20 +897,20 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_hbpa6mpc9u88d3f27xqg',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_142dkj5zpjr3bpzdqwtc',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_czel8kvoy45lr57tuvqc',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_tn7qmo1fauj7ausygku8',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_af6bgjs9qe1u3xe18qgz',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_wf8frlw6hy4nj2ec6whi',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_vkw92ltzy6ha84hu9rym',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_jy24zop4xjfo7pysrmfn',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_y330hyqrjfkmxt36wma6',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_rsiddw7pc4cbaodcvffu',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_w1h1omnmdxgfj6bi35x6',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_cbi93359080et3e6x4tr',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_v29sll8caochpbhbni9v',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_06q290tcxjtv1z0yvu4p',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_m6wmazeenzof4z5l5n19',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_qvjqnt24xku6hww7d3i5',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_dweseye339es9ovjb02r(cell.i, cell.j, group.css_id);
+                  styleCell_azadgsw800c1da3hl1cx(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -918,17 +918,17 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_hbpa6mpc9u88d3f27xqg, .table th.tinytable_css_hbpa6mpc9u88d3f27xqg { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_142dkj5zpjr3bpzdqwtc, .table th.tinytable_css_142dkj5zpjr3bpzdqwtc { text-align: center; }
-      .table td.tinytable_css_czel8kvoy45lr57tuvqc, .table th.tinytable_css_czel8kvoy45lr57tuvqc { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_tn7qmo1fauj7ausygku8, .table th.tinytable_css_tn7qmo1fauj7ausygku8 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_af6bgjs9qe1u3xe18qgz, .table th.tinytable_css_af6bgjs9qe1u3xe18qgz { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_wf8frlw6hy4nj2ec6whi, .table th.tinytable_css_wf8frlw6hy4nj2ec6whi { text-align: left; }
-      .table td.tinytable_css_vkw92ltzy6ha84hu9rym, .table th.tinytable_css_vkw92ltzy6ha84hu9rym { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_jy24zop4xjfo7pysrmfn, .table th.tinytable_css_jy24zop4xjfo7pysrmfn { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_y330hyqrjfkmxt36wma6, .table th.tinytable_css_y330hyqrjfkmxt36wma6 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_rsiddw7pc4cbaodcvffu, .table th.tinytable_css_rsiddw7pc4cbaodcvffu { text-align: center; }
+      .table td.tinytable_css_w1h1omnmdxgfj6bi35x6, .table th.tinytable_css_w1h1omnmdxgfj6bi35x6 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_cbi93359080et3e6x4tr, .table th.tinytable_css_cbi93359080et3e6x4tr { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_v29sll8caochpbhbni9v, .table th.tinytable_css_v29sll8caochpbhbni9v { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_06q290tcxjtv1z0yvu4p, .table th.tinytable_css_06q290tcxjtv1z0yvu4p { text-align: left; }
+      .table td.tinytable_css_m6wmazeenzof4z5l5n19, .table th.tinytable_css_m6wmazeenzof4z5l5n19 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_qvjqnt24xku6hww7d3i5, .table th.tinytable_css_qvjqnt24xku6hww7d3i5 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_dweseye339es9ovjb02r" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_azadgsw800c1da3hl1cx" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
