--- a/04-PO33Q.html
+++ b/04-PO33Q.html
@@ -183,7 +183,7 @@ div.csl-indent {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./11-Markdown.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">Markdown</span></a>
+  <a href="./11-Quarto.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">Quarto</span></a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -766,8 +766,8 @@ Table&nbsp;3: What is left…
 
     <script>
 
-      function styleCell_4fqfb2a8xt2na4azfwks(i, j, css_id) {
-          var table = document.getElementById("tinytable_4fqfb2a8xt2na4azfwks");
+      function styleCell_twep3uf2qdik9z3g0swv(i, j, css_id) {
+          var table = document.getElementById("tinytable_twep3uf2qdik9z3g0swv");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -776,8 +776,8 @@ Table&nbsp;3: What is left…
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_4fqfb2a8xt2na4azfwks(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_4fqfb2a8xt2na4azfwks");
+      function spanCell_twep3uf2qdik9z3g0swv(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_twep3uf2qdik9z3g0swv");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -808,21 +808,21 @@ Table&nbsp;3: What is left…
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '-1', j: 2 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_9kn061z7x4o3dr0z9cr4',}, 
-          { positions: [ { i: '6', j: 1 }, { i: '6', j: 2 }, { i: '6', j: 3 },  ], css_id: 'tinytable_css_ozi0c9xg5aii3vxwhymm',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '4', j: 1 }, { i: '5', j: 1 }, { i: '2', j: 2 }, { i: '4', j: 2 }, { i: '1', j: 2 }, { i: '2', j: 3 }, { i: '3', j: 1 }, { i: '4', j: 3 }, { i: '5', j: 2 }, { i: '3', j: 2 }, { i: '1', j: 3 }, { i: '3', j: 3 }, { i: '5', j: 3 },  ], css_id: 'tinytable_css_zsu967h303inyg9ex8g6',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_pqlk1ahb60nyrai16itr',}, 
-          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 },  ], css_id: 'tinytable_css_fd2182deeoxxcwjz6l7e',}, 
-          { positions: [ { i: '6', j: 0 },  ], css_id: 'tinytable_css_keg657ixsyz0tcylxgx1',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 },  ], css_id: 'tinytable_css_vemop9aypgnbo59eatue',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_n544mrowxgooiizoffvk',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_okb52ao7twuy7zudbg2x',}, 
+          { positions: [ { i: '-1', j: 2 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_c89mwfwp9msvwv2rzzty',}, 
+          { positions: [ { i: '6', j: 1 }, { i: '6', j: 2 }, { i: '6', j: 3 },  ], css_id: 'tinytable_css_foflygqjwrh0kq83td8c',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '4', j: 1 }, { i: '5', j: 1 }, { i: '2', j: 2 }, { i: '4', j: 2 }, { i: '1', j: 2 }, { i: '2', j: 3 }, { i: '3', j: 1 }, { i: '4', j: 3 }, { i: '5', j: 2 }, { i: '3', j: 2 }, { i: '1', j: 3 }, { i: '3', j: 3 }, { i: '5', j: 3 },  ], css_id: 'tinytable_css_gkevsyxnzv4hsty15wro',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_25n31rlnvsl7nzrarksy',}, 
+          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 },  ], css_id: 'tinytable_css_9rtxzshesfa6rj4upbi6',}, 
+          { positions: [ { i: '6', j: 0 },  ], css_id: 'tinytable_css_8wx40co8qtmirfthmst3',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 },  ], css_id: 'tinytable_css_qj8ccfbnj30q0ywqj6oc',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_c5jl51r6cyuw3rmabgrp',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_j15cxeqc7k9v8a7hhqbz',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_4fqfb2a8xt2na4azfwks(cell.i, cell.j, group.css_id);
+                  styleCell_twep3uf2qdik9z3g0swv(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -830,18 +830,18 @@ Table&nbsp;3: What is left…
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_9kn061z7x4o3dr0z9cr4, .table th.tinytable_css_9kn061z7x4o3dr0z9cr4 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_ozi0c9xg5aii3vxwhymm, .table th.tinytable_css_ozi0c9xg5aii3vxwhymm { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_zsu967h303inyg9ex8g6, .table th.tinytable_css_zsu967h303inyg9ex8g6 { text-align: center; }
-      .table td.tinytable_css_pqlk1ahb60nyrai16itr, .table th.tinytable_css_pqlk1ahb60nyrai16itr { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_fd2182deeoxxcwjz6l7e, .table th.tinytable_css_fd2182deeoxxcwjz6l7e { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_keg657ixsyz0tcylxgx1, .table th.tinytable_css_keg657ixsyz0tcylxgx1 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_vemop9aypgnbo59eatue, .table th.tinytable_css_vemop9aypgnbo59eatue { text-align: left; }
-      .table td.tinytable_css_n544mrowxgooiizoffvk, .table th.tinytable_css_n544mrowxgooiizoffvk { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_okb52ao7twuy7zudbg2x, .table th.tinytable_css_okb52ao7twuy7zudbg2x { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_c89mwfwp9msvwv2rzzty, .table th.tinytable_css_c89mwfwp9msvwv2rzzty { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_foflygqjwrh0kq83td8c, .table th.tinytable_css_foflygqjwrh0kq83td8c { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_gkevsyxnzv4hsty15wro, .table th.tinytable_css_gkevsyxnzv4hsty15wro { text-align: center; }
+      .table td.tinytable_css_25n31rlnvsl7nzrarksy, .table th.tinytable_css_25n31rlnvsl7nzrarksy { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_9rtxzshesfa6rj4upbi6, .table th.tinytable_css_9rtxzshesfa6rj4upbi6 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_8wx40co8qtmirfthmst3, .table th.tinytable_css_8wx40co8qtmirfthmst3 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_qj8ccfbnj30q0ywqj6oc, .table th.tinytable_css_qj8ccfbnj30q0ywqj6oc { text-align: left; }
+      .table td.tinytable_css_c5jl51r6cyuw3rmabgrp, .table th.tinytable_css_c5jl51r6cyuw3rmabgrp { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_j15cxeqc7k9v8a7hhqbz, .table th.tinytable_css_j15cxeqc7k9v8a7hhqbz { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_4fqfb2a8xt2na4azfwks" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_twep3uf2qdik9z3g0swv" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
